--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
@@ -29,12 +33,11 @@
   display: flex;
   align-items: center;
   padding-left: 64px;
-  width: 730px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
 }
-
 
 .header__subtitle {
  position: absolute;
@@ -44,9 +47,15 @@
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
+ z-index: 3;
+}
+
+.header__link {
+  color: #2f80ed;
 }
 
 .header__main-illustration {
+  object-fit: cover;
   position: absolute;
   width: 765px;
   height: 608px;
@@ -67,7 +76,7 @@
   z-index: 1;
 }
 
-.discription {
+.description {
   display: flex;
   justify-content: center;
 }
@@ -159,7 +168,7 @@
 .feynman {
   margin-top: 100px;
   background-color: #f2f2f2;
-  height: 890px;
+  min-height: 890px;
   position: relative;
   background-image: url("../images/feynman.png");
   background-repeat: no-repeat;
@@ -192,6 +201,7 @@
   position: absolute;
   right: 48px;
   top: 50%;
+  color: #2f80ed;
 }
 
 .kaufman {
@@ -202,6 +212,7 @@
 }
 
 .section-title_theme_dark {
+  position: relative;
   color: white;
   width: 60%;
   text-align: center;
@@ -209,9 +220,11 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
+  position: relative;
   color: white;
   width: 60%;
   text-align: center;
@@ -219,9 +232,11 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  z-index: 2;
 }
 
 .kaufman__triangle {
+  background-image: url("../images/kaufman-triangle.svg");
   width: 877px;
   height: 877px;
   position: absolute;
@@ -252,16 +267,18 @@
 }
 
 .footer {
-  min-height: 350px;
+  height: 350px;                    /* min-height: 350px; не работает в связке с border-box */
   background-color: #1f1f1f;
   padding-top: 60px;
   padding-bottom: 40px;
   display: flex;
   align-items: center;
   flex-direction: column;
+  box-sizing: border-box;
 }
 
 .footer__columns {
+  height: 100%;
   width: 90%;
   display: flex;
   flex-direction: row;
@@ -274,11 +291,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 350px;
 }
 
 .logo_place_footer {
-
+  width: 228px;
+  height: 32px;
 }
 
 .footer__author {
