--- a/styles/style.css
+++ b/styles/style.css
@@ -129,13 +129,12 @@
 }
 
 .section-subtitle {
-  margin: 0;
   width: 60%;
   padding-top: 20px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -179,7 +178,6 @@
 }
 
 .feynman__title {
-  margin: 0;
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
@@ -223,7 +221,6 @@
 }
 
 .section-subtitle_theme_dark {
-  margin: 0;
   position: relative;
   color: white;
   margin: 20px auto 0;
