--- a/blocks/footer/__columns/__column/_content_info/__column-link/footer__column-link.css
+++ b/blocks/footer/__columns/__column/_content_info/__column-link/footer__column-link.css
@@ -6,4 +6,9 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  transition: 0.5s;
+}
+
+.footer__column-link:hover {
+  opacity: 50%;
 }
