--- a/pages/index.css
+++ b/pages/index.css
@@ -26,19 +26,23 @@
 @import url(../blocks/content/video/video.css);
 @import url(../blocks/content/video/__iframes/video__iframes.css);
 @import url(../blocks/content/video/__iframes/__iframe/video__iframe.css);
-@import url();
+
 @import url(../blocks/content/oakley/oakley.css);
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
+
+@import url(../blocks/content/khan/khan.css);
+@import url(../blocks/content/khan/__container/khan__container.css);
+@import url(../blocks/content/khan/__container/__author/khan__author.css);
+@import url(../blocks/content/khan/__container/__title/khan__title.css);
+@import url(../blocks/content/khan/__container/__quote/khan__quote.css);
+@import url(../blocks/content/khan/__container/__quote-author/khan__quote-author.css);
+@import url(../blocks/content/khan/__container/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/content/khan/__container/__book-container/khan__book-container.css);
+@import url(../blocks/content/khan/__container/__book-container/__book-pic/khan__book-pic.css);
+@import url(../blocks/content/khan/__container/__book-container/__buy-link/khan__buy-link.css);
+
+@import url(../blocks/content/resources/resources.css);
+@import url(../blocks/content/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/content/resources/__logo-zone/__link/resources__link.css);
 
 @import url(../blocks/content/digits/digits.css);
 @import url(../blocks/content/digits/section-title/section-title.css);
@@ -60,15 +64,6 @@
 @import url(../blocks/content/kaufman/table/__cell/__heading/_theme_dark/table__heading_theme_dark.css);
 @import url(../blocks/content/kaufman/table/__cell/__text/_theme_dark/table__text_theme_dark.css);
 @import url(../blocks/content/kaufman/__triangle/kaufman__triangle.css);
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
 
 
 @import url(../blocks/footer/footer.css);
