--- a/blocks/header/__square-pic/_rotation/header__square-pic_rotation.css
+++ b/blocks/header/__square-pic/_rotation/header__square-pic_rotation.css
@@ -7,6 +7,6 @@
   }
 }
 
-.header__square-pic_rotation {
+.header__square-pic_rotation, .kaufman__triangle {
   animation: rotation 20s linear infinite;
 }
