finish8-1st_review

--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -7,6 +7,6 @@
   }
 }
 
-.header__square-pic_rotation, .kaufman__triangle {
+.header__square-pic, .kaufman__triangle {
   animation: rotation 20s linear infinite;
 }
