--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,7 @@
   max-height: 756px;
   position: relative;
   display: flex;
+  align-items: center;
   background-color: #f2f2f2;
   overflow: hidden;
 }
