--- a/pages/index.css
+++ b/pages/index.css
@@ -1,31 +1,32 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/logo/_place_header/logo_place_header.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/header/__square-pic/header__square-pic.css);
+
+
 @import url(../blocks/rotation/rotation.css);
 
-
-@import url(../blocks/content/description/description.css);
-@import url(../blocks/description/two-columns/two-columns.css);
-@import url(../blocks/description/two-columns/__brief/two-columns__brief.css);
-@import url(../blocks/description/two-columns/__main-text/two-columns__main-text.css);
-@import url(../blocks/description/two-columns/__main-text/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/description/description.css);
+@import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
 
 @import url(../blocks/techniques/techniques.css);
-@import url(../blocks/techniques/cards/cards.css);
-@import url(../blocks/techniques/cards/__item/cards__item.css);
-@import url(../blocks/techniques/cards/__item/__image/cards__image.css);
-@import url(../blocks/techniques/cards/__item/__title/cards__title.css);
-@import url(../blocks/techniques/cards/__item/__description/cards__description.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
 
 @import url(../blocks/video/video.css);
 @import url(../blocks/video/__iframes/video__iframes.css);
-@import url(../blocks/video/__iframes/__iframe/video__iframe.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
 
 @import url(../blocks/oakley/oakley.css);
 
@@ -37,21 +38,21 @@
 @import url(../blocks/khan/__quote-author/khan__quote-author.css);
 @import url(../blocks/khan/__quote-author-subline/khan__quote-author-subline.css);
 @import url(../blocks/khan/__book-container/khan__book-container.css);
-@import url(../blocks/khan/__book-container/__book-pic/khan__book-pic.css);
-@import url(../blocks/khan/__book-container/__buy-link/khan__buy-link.css);
+@import url(../blocks/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/khan/__buy-link/khan__buy-link.css);
 
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
-@import url(../blocks/resources/__logo-zone/__link/resources__link.css);
-@import url(../blocks/resources/__logo-zone/__link/__logo/resources__logo.css);
+@import url(../blocks/resources/__link/resources__link.css);
+@import url(../blocks/resources/__logo/resources__logo.css);
 
 @import url(../blocks/digits/digits.css);
-@import url(../blocks/digits/section-title/section-title.css);
-@import url(../blocks/digits/section-subtitle/section-subtitle.css);
-@import url(../blocks/digits/table/table.css);
-@import url(../blocks/digits/table/__cell/table__cell.css);
-@import url(../blocks/digits/table/__cell/__heading/table__heading.css);
-@import url(../blocks/digits/table/__cell/__text/table__text.css);
+@import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/table/table.css);
+@import url(../blocks/table/__cell/table__cell.css);
+@import url(../blocks/table/__heading/table__heading.css);
+@import url(../blocks/table/__text/table__text.css);
 
 @import url(../blocks/feynman/feynman.css);
 @import url(../blocks/feynman/__title/feynman__title.css);
@@ -59,34 +60,20 @@
 @import url(../blocks/feynman/__link/feynman__link.css);
 
 @import url(../blocks/kaufman/kaufman.css);
-@import url(../blocks/kaufman/section-title/_theme_dark/section-title_theme_dark.css);
-@import url(../blocks/kaufman/section-subtitle/_theme_dark/section-subtitle_theme_dark.css);
-@import url(../blocks/kaufman/table/__cell/_theme_dark/table__cell_theme_dark.css);
-@import url(../blocks/kaufman/table/__cell/__heading/_theme_dark/table__heading_theme_dark.css);
-@import url(../blocks/kaufman/table/__cell/__text/_theme_dark/table__text_theme_dark.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
+@import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
+@import url(../blocks/table/__cell/__heading/_theme/table__heading_theme_dark.css);
+@import url(../blocks/table/__cell/__text/_theme/table__text_theme_dark.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
-@import url(../blocks/footer/__columns/__column/_content_copyright/footer__column_content_copyright.css);
-@import url(../blocks/footer/__columns/__column/_content_copyright/logo/_place_footer/logo_place_footer.css);
-@import url(../blocks/footer/__columns/__column/_content_copyright/__author/footer__author.css);
-@import url(../blocks/footer/__columns/__column/_content_info/__column-heading/footer__column-heading.css);
-@import url(../blocks/footer/__columns/__column/_content_info/__column-links/footer__column-links.css);
-@import url(../blocks/footer/__columns/__column/_content_info/__social-icon/footer__social-icon.css);
-@import url(../blocks/footer/__columns/__column/_content_info/__column-link/footer__column-link.css);
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import url(../blocks/footer/__column/_content_copyright/footer__column_content_copyright.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-links/footer__column-links.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
+@import url(../blocks/footer/__column-link/footer__column-link.css);
